# wttd

./: README.md  pyproject.toml  requirements.txt
eventex/: settings.py  wsgi.py
eventex/core/: tests.py
eventex/core/templates/: index.html
eventex/subscriptions/: tests.py  views.py
eventex/subscriptions/templates/subscriptions/: subscription_email.txt  subscription_form.html
